All files starting with "_" need to be reworked

--- a/templates/bg/bg_base.html
+++ b/templates/bg/bg_base.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <!---->
 <!-- A html tag with the necessary language for the page-->
 <!-- <html lang="bg/en/de/fr">-->
-<html lang="de">
+<html lang="bg">
 
 <head>
     <meta charset="UTF-8">
@@ -28,21 +27,21 @@
 
     <nav class="Navbar">
         <div class="topnav" id="myTopnav">
-            <a href="/de/home" class="active">Home</a>
-            <a href="">Documente</a>
+            <a href="/en/home" class="active">Начална Страница</a>
+            <a href="">Документи</a>
             <div class="dropdown">
-                <button class="dropbtn">Sprache
+                <button class="dropbtn">Езици
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="?lang=en">English</a>
-                    <a href="?lang=de">Deutsch</a>
-                    <a href="">Bulgarisch</a>
-                    <a href="">Französisch</a>
+                    <a href="?lang=en">Англйиски</a>
+                    <a href="?lang=de">Немски</a>
+                    <a href="?lang=bg">Български</a>
+                    <a href="?lang=fr">Френски</a>
                 </div>
             </div>
-            <a href="/de/about">Über uns</a>
-            <a href="">Ausloggen</a>
+            <a href="/en/about">За нас</a>
+            <a href="">Изход</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
     </nav>
