--- a/templates/fr/en_base.html
+++ b/templates/fr/en_base.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <!---->
 <!-- A html tag with the necessary language for the page-->
 <!-- <html lang="bg/en/de/fr">-->
-<html lang="de">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -28,21 +27,21 @@
 
     <nav class="Navbar">
         <div class="topnav" id="myTopnav">
-            <a href="/de/home" class="active">Home</a>
-            <a href="">Documente</a>
+            <a href="/en/home" class="active">Home</a>
+            <a href="">Documents</a>
             <div class="dropdown">
-                <button class="dropbtn">Sprache
+                <button class="dropbtn">Languages
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
                     <a href="?lang=en">English</a>
-                    <a href="?lang=de">Deutsch</a>
-                    <a href="">Bulgarisch</a>
-                    <a href="">Französisch</a>
+                    <a href="?lang=de">German</a>
+                    <a href="?lang=bg">Bulgarian</a>
+                    <a href="?lang=fr">French</a>
                 </div>
             </div>
-            <a href="/de/about">Über uns</a>
-            <a href="">Ausloggen</a>
+            <a href="/en/about">About</a>
+            <a href="">Logout</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
     </nav>
