--- a/templates/bg/privacy_policy.html
+++ b/templates/bg/privacy_policy.html
@@ -1,3 +1,8 @@
+{% extends 'bg/bg_base.html' %}
+
+{% block head %}
+<title>Политика за поверителност</title>
+{% endblock %}
 {% block body %}
 
 <h1>Политика за поверителност</h1>
