split und gezerklärung

--- a/templates/bg/about_us.html
+++ b/templates/bg/about_us.html
@@ -19,7 +19,7 @@
     Екипът ни се състои от 6 студенти в Хохшуле Манхайм в Германия, всички в трети семестър. Ние използваме
     най-новите технологии, които научихме в кооперация с нашия професор, 
     както и от <b id="welfare"> факултета по информатика </b> в нашия
-    университет за създаване на този уебсайт /апликация/.
+    университет за създаване на този уебсайт.
 </p>
 <p>
 
