--- a/templates/en/about_us.html
+++ b/templates/en/about_us.html
@@ -19,7 +19,7 @@
     Our team is composed of 6 students, all in their third semester, from the Hochschule Mannheim in Germany. We use the
     newest technology
     we just learned in cooperation with our professor, as well as the <b id="welfare"> welfare faculty </b>from our
-    school to create this website /app/.
+    school to create this website.
 </p>
 <p>
 
