--- a/static/css/form.css
+++ b/static/css/form.css
@@ -6,7 +6,19 @@ body {
     background-size: 100%;
     font-family: Arial, Helvetica, sans-serif;
 }
-
+#welcometext{
+  max-width:500px;
+    min-height: 470px;
+    float:left;
+    margin: 40px auto;
+    margin-left: 30px;
+    border-radius:2px;
+    padding:20px;
+;
+}
+#finalsentence{
+  float: left;
+}
 form{
     max-width:500px;
     min-height: 470px;
@@ -14,7 +26,7 @@ form{
     background:#FDFDFD;
     border-radius:2px;
     padding:20px;
-    font-family: Georgia, "Times New Roman", Times, serif;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 h1{
