French translation part 1

--- a/templates/fr/privacy_policy.html
+++ b/templates/fr/privacy_policy.html
@@ -6,119 +6,120 @@
 {% endblock %}
 {% block body %}
 
-<h1>Privacy Policy for GEZ</h1>
+<h1>Politique de confidentialité pour GEZ</h1>
 
-<p>At GEZ-Help one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of
-    information that is collected and recorded by GEZ-Help and how we use it.</p>
+<p>Chez GEZ-Help, l'une de nos principales priorités est la confidentialité de nos visiteurs. Ce document de politique de confidentialité contient des types de
+    les informations collectées et enregistrées par GEZ-Help et comment nous les utilisons.</p>
 
-<p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.
+<p>Si vous avez des questions supplémentaires ou avez besoin de plus d'informations sur notre politique de confidentialité, n'hésitez pas à nous contacter.
 </p>
 
-<p>This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to
-    the information that they shared and/or collect in GEZ-Help. This policy is not applicable to any information
-    collected offline or via channels other than this website.</p>
+<p>Cette politique de confidentialité s'applique uniquement à nos activités en ligne et est valable pour les visiteurs de notre site Web en ce qui concerne
+    les informations qu'ils ont partagées et / ou collectées dans GEZ-Help. Cette politique ne s'applique à aucune information
+    collectés hors ligne ou via des canaux autres que ce site Web.</p>
 
-<h2>Consent</h2>
+<h2>Consentement</h2>
 
-<p>By using our website, you hereby consent to our Privacy Policy and agree to its terms.</p>
+<p>En utilisant notre site Web, vous consentez par la présente à notre politique de confidentialité et acceptez ses conditions.
+</p>
 
-<h2>Information we collect</h2>
+<h2>Les informations que nous collectons</h2>
 
-<p>The personal information that you are asked to provide, and the reasons why you are asked to provide it, will be made
-    clear to you at the point we ask you to provide your personal information.</p>
-<p>If you contact us directly, we may receive additional information about you such as your name, email address, phone
-    number, the contents of the message and/or attachments you may send us, and any other information you may choose to
-    provide.</p>
-<p>When you register for an Account, we may ask for your contact information, including items such as name, address,
-    email address, and telephone number.</p>
+<p>Les informations personnelles que vous êtes invité à fournir, et les raisons pour lesquelles vous êtes invité à les fournir, seront faites
+    clair pour vous au moment où nous vous demandons de fournir vos informations personnelles.</p>
+<p>Si vous nous contactez directement, nous pouvons recevoir des informations supplémentaires à votre sujet telles que votre nom, adresse e-mail, téléphone
+    numéro, le contenu du message et / ou des pièces jointes que vous pouvez nous envoyer, et toute autre information que vous pouvez choisir de
+    apporter.</p>
+<p>Lorsque vous vous inscrivez pour un compte, nous pouvons vous demander vos coordonnées, y compris des éléments tels que le nom, l'adresse,
+    adresse e-mail et numéro de téléphone.</p>
 
-<h2>How we use your information</h2>
+<h2>Comment nous utilisons vos informations</h2>
 
-<p>We use the information we collect in various ways, including to:</p>
+<p>Nous utilisons les informations que nous recueillons de différentes manières, notamment pour:</p>
 
 <ul>
-    <li>Provide, operate, and maintain our website</li>
-    <li>Improve, personalize, and expand our website</li>
-    <li>Understand and analyze how you use our website</li>
-    <li>Develop new products, services, features, and functionality</li>
-    <li>Communicate with you, either directly or through one of our partners, including for customer service, to provide
-        you with updates and other information relating to the website, and for marketing and promotional purposes</li>
-    <li>Send you emails</li>
-    <li>Find and prevent fraud</li>
+    <li>Fournir, exploiter et maintenir notre site Web</li>
+    <li>Améliorez, personnalisez et développez notre site Web</li>
+    <li>Comprendre et analyser comment vous utilisez notre site Web</li>
+    <li>Développer de nouveaux produits, services, fonctionnalités et fonctionnalités</li>
+    <li>Communiquez avec vous, directement ou via l'un de nos partenaires, y compris pour le service client, pour fournir
+        vous avec des mises à jour et d'autres informations relatives au site Web, et à des fins de marketing et de promotion</li>
+    <li>Vous envoyer des e-mails</li>
+    <li>Trouvez et prévenez la fraude</li>
 </ul>
 
-<h2>Log Files</h2>
+<h2>Fichiers journaux</h2>
 
-<p>GEZ-Help follows a standard procedure of using log files. These files log visitors when they visit websites. All
-    hosting companies do this and a part of hosting services' analytics. The information collected by log files include
-    internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit
-    pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable.
-    The purpose of the information is for analyzing trends, administering the site, tracking users' movement on the
-    website, and gathering demographic information.</p>
+<p>GEZ-Help suit une procédure standard d'utilisation des fichiers journaux. Ces fichiers enregistrent les visiteurs lorsqu'ils visitent des sites Web. Tout
+    les sociétés d'hébergement font cela et font partie de l'analyse des services d'hébergement. Les informations collectées par les fichiers journaux comprennent
+    adresses de protocole Internet (IP), type de navigateur, fournisseur d'accès Internet (FAI), date et heure, renvoi / sortie
+    pages, et éventuellement le nombre de clics. Ceux-ci ne sont liés à aucune information personnellement identifiable.
+    Le but de l'information est d'analyser les tendances, d'administrer le site, de suivre les mouvements des utilisateurs sur le
+    site Web et la collecte d’informations démographiques.</p>
 
-<h2>Cookies and Web Beacons</h2>
+<h2>Cookies et balises Web</h2>
 
-<p>Like any other website, GEZ-Help uses 'cookies'. These cookies are used to store information including visitors'
-    preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize
-    the users' experience by customizing our web page content based on visitors' browser type and/or other information.
+<p>Comme tout autre site Web, GEZ-Help utilise des «cookies». Ces cookies sont utilisés pour stocker des informations, y compris les visiteurs
+    préférences et les pages du site Web auxquelles le visiteur a accédé ou visité. Les informations sont utilisées pour optimiser
+    l'expérience des utilisateurs en personnalisant le contenu de notre page Web en fonction du type de navigateur des visiteurs et / ou d'autres informations.
 </p>
 
-<h2>Advertising Partners Privacy Policies</h2>
+<h2>Politiques de confidentialité des partenaires publicitaires</h2>
 
-<P>You may consult this list to find the Privacy Policy for each of the advertising partners of GEZ-Help.</p>
+<P>Vous pouvez consulter cette liste pour trouver la politique de confidentialité de chacun des partenaires publicitaires de GEZ-Help.</p>
 
-<p>Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in
-    their respective advertisements and links that appear on GEZ-Help, which are sent directly to users' browser. They
-    automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of
-    their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.
+<p>Les serveurs publicitaires ou réseaux publicitaires tiers utilisent des technologies telles que les cookies, JavaScript ou les balises Web utilisées dans
+    leurs publicités et liens respectifs qui apparaissent sur GEZ-Help, qui sont envoyés directement au navigateur des utilisateurs. Ils
+    recevez automatiquement votre adresse IP lorsque cela se produit. Ces technologies sont utilisées pour mesurer l'efficacité des
+    leurs campagnes publicitaires et / ou pour personnaliser le contenu publicitaire que vous voyez sur les sites Web que vous visitez.
 </p>
 
-<p>Note that GEZ-Help has no access to or control over these cookies that are used by third-party advertisers.</p>
+<p>Notez que GEZ-Help n'a aucun accès ou contrôle sur ces cookies qui sont utilisés par des annonceurs tiers.</p>
 
-<h2>Third Party Privacy Policies</h2>
+<h2>Politiques de confidentialité des tiers</h2>
 
-<p>GEZ-Help's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the
-    respective Privacy Policies of these third-party ad servers for more detailed information. It may include their
-    practices and instructions about how to opt-out of certain options. </p>
+<p>La politique de confidentialité de GEZ-Help ne s'applique pas aux autres annonceurs ou sites Web. Ainsi, nous vous conseillons de consulter le
+    Politiques de confidentialité respectives de ces serveurs publicitaires tiers pour des informations plus détaillées. Cela peut inclure leur
+    pratiques et instructions sur la façon de refuser certaines options. </p>
 
-<p>You can choose to disable cookies through your individual browser options. To know more detailed information about
-    cookie management with specific web browsers, it can be found at the browsers' respective websites.</p>
+<p>Vous pouvez choisir de désactiver les cookies via les options de votre navigateur individuel. Pour en savoir plus sur
+    gestion des cookies avec des navigateurs Web spécifiques, il peut être trouvé sur les sites Web respectifs des navigateurs.</p>
 
-<h2>CCPA Privacy Rights (Do Not Sell My Personal Information)</h2>
+<h2>Droits de confidentialité de l'ACCP (ne pas vendre mes informations personnelles)</h2>
 
-<p>Under the CCPA, among other rights, Baden-Württemberg consumers have the right to:</p>
-<p>Request that a business that collects a consumer's personal data disclose the categories and specific pieces of
-    personal data that a business has collected about consumers.</p>
-<p>Request that a business delete any personal data about the consumer that a business has collected.</p>
-<p>Request that a business that sells a consumer's personal data, not sell the consumer's personal data.</p>
-<p>If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please
-    contact us.</p>
+<p>En vertu de la CCPA, entre autres droits, les consommateurs du Bade-Wurtemberg ont le droit de:</p>
+<p>Demander qu'une entreprise qui recueille les données personnelles d'un consommateur divulgue les catégories et les éléments spécifiques
+    les données personnelles qu'une entreprise a collectées sur les consommateurs.</p>
+<p>Demander à une entreprise de supprimer toutes les données personnelles sur le consommateur qu'une entreprise a collectées.</p>
+<p>Demander à une entreprise qui vend les données personnelles d'un consommateur de ne pas vendre les données personnelles du consommateur.</p>
+<p>Si vous faites une demande, nous avons un mois pour vous répondre. Si vous souhaitez exercer l'un de ces droits, veuillez
+    Nous contacter.</p>
 
-<h2>GDPR Data Protection Rights</h2>
+<h2>Droits de protection des données GDPR</h2>
 
-<p>We would like to make sure you are fully aware of all of your data protection rights. Every user is entitled to the
-    following:</p>
-<p>The right to access – You have the right to request copies of your personal data. We may charge you a small fee for
-    this service.</p>
-<p>The right to rectification – You have the right to request that we correct any information you believe is inaccurate.
-    You also have the right to request that we complete the information you believe is incomplete.</p>
-<p>The right to erasure – You have the right to request that we erase your personal data, under certain conditions.</p>
-<p>The right to restrict processing – You have the right to request that we restrict the processing of your personal
-    data, under certain conditions.</p>
-<p>The right to object to processing – You have the right to object to our processing of your personal data, under
-    certain conditions.</p>
-<p>The right to data portability – You have the right to request that we transfer the data that we have collected to
-    another organization, or directly to you, under certain conditions.</p>
-<p>If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please
-    contact us.</p>
+<p>Nous souhaitons nous assurer que vous connaissez parfaitement tous vos droits en matière de protection des données. Chaque utilisateur a droit au
+    Suivant:</p>
+<p>Le droit d'accès - Vous avez le droit de demander des copies de vos données personnelles. Nous pouvons vous facturer une somme modique pour
+    ce service.</p>
+<p>Le droit de rectification - Vous avez le droit de demander que nous corrigions toute information que vous jugez inexacte.
+    Vous avez également le droit de demander que nous complétions les informations que vous estimez incomplètes.</p>
+<p>Le droit à l'effacement - Vous avez le droit de demander que nous effacions vos données personnelles, sous certaines conditions.</p>
+<p>Le droit de restreindre le traitement - Vous avez le droit de demander que nous restreignions le traitement de vos données personnelles
+    données, sous certaines conditions.</p>
+<p>Le droit de vous opposer au traitement - Vous avez le droit de vous opposer au traitement de vos données personnelles, sous
+    certaines conditions.</p>
+<p>Le droit à la portabilité des données - Vous avez le droit de demander que nous transférions les données que nous avons collectées à
+    une autre organisation, ou directement à vous, sous certaines conditions.</p>
+<p>Si vous faites une demande, nous avons un mois pour vous répondre. Si vous souhaitez exercer l'un de ces droits, veuillez
+    Nous contacter.</p>
 
-<h2>Children's Information</h2>
+<h2>Informations sur les enfants</h2>
 
-<p>Another part of our priority is adding protection for children while using the internet. We encourage parents and
-    guardians to observe, participate in, and/or monitor and guide their online activity.</p>
+<p>Une autre partie de notre priorité consiste à protéger les enfants lorsqu'ils utilisent Internet. Nous encourageons les parents et
+    tuteurs pour observer, participer et / ou surveiller et guider leur activité en ligne.</p>
 
-<p>GEZ-Help does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you
-    think that your child provided this kind of information on our website, we strongly encourage you to contact us
-    immediately and we will do our best efforts to promptly remove such information from our records.</p>
+<p>GEZ-Help ne recueille sciemment aucune information personnelle identifiable d'enfants de moins de 13 ans.
+    pensez que votre enfant a fourni ce type d'informations sur notre site Web, nous vous encourageons vivement à nous contacter
+    immédiatement et nous ferons de notre mieux pour supprimer rapidement ces informations de nos archives.</p>
 
 {% endblock %}
