--- a/templates/fr/welcome.html
+++ b/templates/fr/welcome.html
@@ -8,23 +8,23 @@
 {% block body %}
 
 <h1>
-    Welcome!
+    Bienvenue!
 </h1>
-<p>Welcome to our website! </p>
+<p>Bienvenue sur notre site! </p>
 <p >
-    Our Team A-5 is here to provide you with the best possible help you can get to fill out all the documents you have
-    to finish for a save and easy life in germany!
-    We work on translating any necessary information for you, whilest explaining in easy to follow steps how to fill
-    every document you could have questions for.
+    Notre équipe A-5 est là pour vous fournir la meilleure aide possible pour remplir tous les documents dont vous disposez
+    à finir pour une vie sauve et facile en allemagne!
+    Nous travaillons à la traduction de toutes les informations nécessaires pour vous, tout en expliquant en étapes faciles à suivre comment remplir
+    chaque document pour lequel vous pourriez avoir des questions.
 </p>
 <br>
 
 <p >
-    Our team is composed of 6 students, all in their third semester, from the Hochschule Mannheim in Germany. We use the
-    newest technology
-    we just learned in cooperation with our professor, as well as the <b id="welfare"> welfare faculty </b>from our
-    school to create this website /app/.<br>
-    If you want to learn more <b>about us </b>, you can find any necessary information <a href = "en/about_us.html"> here</a>.
+    Notre équipe est composée de 6 étudiants, tous dans leur troisième semestre, de la Hochschule Mannheim en Allemagne. Nous utilisons le
+    technologie la plus récente
+    nous venons d'apprendre en coopération avec notre professeur, ainsi que le <b id="welfare"> faculté de bien-être </b>de notre
+    école pour créer ce site /app/.<br>
+    Si vous voulez en savoir plus <b>à propos de nous </b>, vous pouvez trouver toutes les informations nécessaires <a href = "en/about_us.html"> here</a>.
 </p>
 
 <p>
