--- a/templates/fr/about_us.html
+++ b/templates/fr/about_us.html
@@ -7,72 +7,72 @@
 {% block body %}
 
 <h1>
-    Welcome to our website!
+    Bienvenue sur notre site!
 </h1>
 <p class="text">
-    Our Team A-5 is here to provide you with the best possible help you can get to fill out all the documents you have
-    to finish for a save and easy life in germany!
-    We work on translating any necessary information for you, whilest explaining in easy to follow steps how to fill
-    every document you could have questions for.
+    Notre équipe A-5 est là pour vous fournir la meilleure aide possible pour remplir tous les documents dont vous disposez
+    à finir pour une vie sauve et facile en allemagne!
+    Nous travaillons à la traduction de toutes les informations nécessaires pour vous, tout en expliquant en étapes faciles à suivre comment remplir
+    chaque document pour lequel vous pourriez avoir des questions.
 </p>
 <p class="text">
-    Our team is composed of 6 students, all in their third semester, from the Hochschule Mannheim in Germany. We use the
-    newest technology
-    we just learned in cooperation with our professor, as well as the <b id="welfare"> welfare faculty </b>from our
-    school to create this website /app/.
+    Notre équipe est composée de 6 étudiants, tous dans leur troisième semestre, de la Hochschule Mannheim en Allemagne. Nous utilisons le
+    technologie la plus récente
+    nous venons d'apprendre en coopération avec notre professeur, ainsi que le <b id="welfare"> faculté de bien-être </b>de notre
+    école pour créer ce site /app/.
 </p>
 <p>
 
 </p>
 <h2>
-    Our teammembers are:
+    Nos équipiers sont:
 </h2>
 <p class="boxed">
-    <img src="/images/Profil 1.png" class="image"> <br>First member is Georgy Haydukov, a who is responsible for
-    the cookies and our privacy policies. You can reach him under his email: <a
+    <img src="/images/Profil 1.png" class="image"> <br>Le premier membre est Georgi Haydukov, responsable de
+    les cookies et nos politiques de confidentialité. Vous pouvez le joindre sous son email: <a
         href="11@stud.hs-mannheim.de">11@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
 <br>
 <p class="boxed">
-    <img src="/images/Profil 2.png" class="image"> <br>Furthermore we have Aleksandar Histrov, our Flask specialist and
-    bulgarian translator. You can reach him under his email: <a href="12@stud.hs-mannheim.de">12@stud.hs-mannheim.de</a>
+    <img src="/images/Profil 2.png" class="image"> <br>De plus, nous avons Aleksandar Histrov, notre spécialiste Flask et
+    traducteur bulgare. Vous pouvez le joindre sous son email: <a href="12@stud.hs-mannheim.de">12@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
 <br>
 <p class="boxed">
-    <img src="/images/Profil 3.png" class="image"> <br>This is Robert Endler who works not only on our imprint, but also
-    on our french translation. You can reach him under his email: <a
+    <img src="/images/Profil 3.png" class="image"> <br>C'est Robert Endler qui travaille non seulement sur notre empreinte, mais aussi
+    sur notre traduction en français. Vous pouvez le joindre sous son email: <a
         href="13@stud.hs-mannheim.de">13@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
 <br>
 <p class="boxed">
-    <img src="/images/Profil 4.png" class="image"> <br>Here is Ilyas Bal who is working on our tutorials and
-    explanations for your future documents. You can reach him under his email: <a
+    <img src="/images/Profil 4.png" class="image"> <br>Voici Ilyas Bal qui travaille sur nos tutoriels et
+    des explications pour vos futurs documents. Vous pouvez le joindre sous son email:<a
         href="14@stud.hs-mannheim.de">14@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
 <br>
 <p class="boxed">
-    <img src="/images/profil 5.png" class="image"> <br>Lennart Gulde is also working on our tutorials and helping out on
-    our loginsystem. You can reach him under his email: <a href="15@stud.hs-mannheim.de">15@stud.hs-mannheim.de</a>
+    <img src="/images/profil 5.png" class="image"> <br>Lennart Gulde travaille également sur nos tutoriels et aide sur
+    notre système de connexion. Vous pouvez le joindre sous son email: <a href="15@stud.hs-mannheim.de">15@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
 <br>
 <p class="boxed">
-    <img src="/images/profil 6.png" class="image"> <br>Finally here is Muhammed Yavuz, who is responsible for the
-    information you are reading right now! Moreover he works on the login, just as on the menu. You can reach him under
-    his email: <a href="16@stud.hs-mannheim.de">16@stud.hs-mannheim.de</a>
+    <img src="/images/profil 6.png" class="image"> <br>Enfin voici Muhammed Yavuz, qui est responsable de la
+    les informations que vous lisez en ce moment! De plus, il travaille sur le login, tout comme sur le menu. Vous pouvez l'atteindre sous
+    son email: <a href="16@stud.hs-mannheim.de">16@stud.hs-mannheim.de</a>
 </p>
 
 <p id="finalsentence">
-    <br>Every member of our team hopes that this site will give you the help you need on your way through germanys
-    officialism. We all wish you a pleasant time in germany!
+    <br>Chaque membre de notre équipe espère que ce site vous apportera l'aide dont vous avez besoin sur votre chemin à travers l'Allemagne.
+    bureaucratie. Nous vous souhaitons tous un agréable séjour en Allemagne!
 </p>
 {% endblock %}
