--- a/templates/fr/legalNotice.html
+++ b/templates/fr/legalNotice.html
@@ -8,65 +8,65 @@
     <h1>Legal Notice</h1>
 </header>
 
-<p><strong>Stadt Mannheim</strong><br>
+<p><strong>Ville de Mannheim</strong><br>
     Rathaus E 5<br>
     D-68159 Mannheim<br>
     Fon +49 621 293-0<br>
     Fax +49 621 293-9532<br>
     E-Mail:<a href="mailto:stadtverwaltung@mannheim.de">stadtverwaltung@mannheim.de</a>
 </p>
-<p>Stadt Mannheim is a corporation under public law.
-    It is represented by the Lord Mayor Dr. Peter Kurz, Rathaus E 5, 68 159 Mannheim.
+<p>Stadt Mannheim est une société de droit public.
+    Il est représenté par le maire Dr. Peter Kurz, Rathaus E 5, 68 159 Mannheim.
 </p>
-<h2>VAT identification number</h2>
-<p>pursuant to § 27 a VAT law: DE 143 845 211
-</p>
-<p>
-    <em>Reference to VAT identification number:</em><br>
-    The Stadt Mannheim is only commercially or professionally active in the context of its businesses of a commercial
-    nature (Section 1 (1) No. 6, Section 4 of the Corporate Tax Act). In addition, the VAT identification number is
-    required for intra-Community acquisitions (§ 1 a of the VAT Act).
+<h2>VAT numéro d'identification</h2>
+<p>conformément au § 27 a de la loi sur la TVA: DE 143845211
 </p>
 <p>
-<h2>Out-of-call online settlement</h2>
+    <em>Référence au numéro d'identification VAT:</em><br>
+    Le Stadt Mannheim n'est commercialement ou professionnellement actif que dans le cadre de ses activités commerciales
+    nature (article 1 (1) n ° 6, article 4 de la loi relative à l'impôt sur les sociétés). De plus, le numéro d'identification TVA est
+    requis pour les acquisitions intracommunautaires (§ 1 a de la loi TVA).
+</p>
 <p>
-    The European Commission is providing this platform <a
+<h2>Règlement en ligne hors appel</h2>
+<p>
+    La Commission européenne met à disposition cette plateforme <a
         href=" https://ec.europa.eu/consumers/odr/main/index.cfm?event=main.home2.show&lng=EN"
-        target="_blank">https://ec.europa.eu/consumers/odr/ </a> for out-of-court online resolution.
+        target="_blank">https://ec.europa.eu/consumers/odr/ </a> pour une résolution extrajudiciaire en ligne.
 </p>
-Information according to § 36 Law on the settlement of consumer law
-Stadt Mannheim is neither willing nor obliged to participate in a dispute settlement procedure before a consumer
-arbitration body.
-</p>
-<p>
-<h2>General responsibility for content</h2>
-<h3>Principle of equal treatment</h3>
-<p>Equality of all persons before the law and protection from discrimination is a universal human right. Every human
-    being has a fundamental right to state action in accordance with the law, i. e. impartial.
-</p>
-<p>The website of Stadt Mannheim is committed to this principle, the objectives of the European Community to protect
-    against discrimination and its legal implementation in the General Equal Treatment Act (AGG).</p>
-<p>In this respect, Stadt Mannheim Mannheim endeavours to prevent or eliminate discrimination on grounds of race or
-    ethnic origin, sex, religion or belief, disability, age or sexual identity.
-</p>
+Informations conformément à l'article 36 de la loi sur le règlement du droit de la consommation
+Stadt Mannheim n'est ni disposé ni obligé de participer à une procédure de règlement des litiges devant un consommateur
+organe d’arbitrage.
 </p>
 <p>
-<h2>Copyright, liability</h2>
-<p>The layout of the homepage, the graphics used as well as the collection of contributions are protected by copyright.
-    The pages may only be reproduced for private use, no changes may be made and no copies may be distributed or used
-    for public reproduction. The individual contributions are also protected by copyright; further information can be
-    found there if necessary. All information on this server is provided without guarantee for its correctness. Under no
-    circumstances shall any liability be assumed for damages resulting from the use of the information retrieved.</p>
-<p>The content on the Mannheim server is the responsibility of the respective content providers. Their subordinate
-    imprint informs about this.</p>
-<p>Despite careful control of the content, we do not accept any liability for the content of external links. We
-    expressly declare that we have no influence on the design and content of the linked pages. We therefore expressly
-    distance ourselves from all contents of the pages, which are accessible via links from this page. This declaration
-    applies to all links and references set within our website.</p>
+<h2>Responsabilité générale du contenu</h2>
+<h3>Principe d'égalité de traitement</h3>
+<p>L'égalité de toutes les personnes devant la loi et la protection contre la discrimination est un droit de l'homme universel. Chaque humain
+    l'être a le droit fondamental d'agir conformément à la loi, i. e. impartial.
+</p>
+<p>Le site Web de Stadt Mannheim est attaché à ce principe, les objectifs de la Communauté européenne à protéger
+    contre la discrimination et sa mise en œuvre juridique dans la loi générale sur l'égalité de traitement (AGG).</p>
+<p>À cet égard, Stadt Mannheim Mannheim s'efforce de prévenir ou d'éliminer la discrimination fondée sur la race ou
+    origine ethnique, sexe, religion ou croyance, handicap, âge ou identité sexuelle.
+</p>
 </p>
 <p>
-<h2>External data sources</h2>
-This website uses:
+<h2>Droits d'auteur, responsabilité</h2>
+<p>La mise en page de la page d'accueil, les graphiques utilisés ainsi que la collection des contributions sont protégés par le droit d'auteur.
+    Les pages ne peuvent être reproduites que pour un usage privé, aucune modification ne peut être apportée et aucune copie ne peut être distribuée ou utilisée
+    pour la reproduction publique. Les contributions individuelles sont également protégées par le droit d'auteur; de plus amples informations peuvent être
+    trouvé là-bas si nécessaire. Toutes les informations sur ce serveur sont fournies sans garantie d'exactitude. Sous le n °
+    circonstances, toute responsabilité sera assumée pour les dommages résultant de l'utilisation des informations récupérées.</p>
+<p>Le contenu du serveur de Mannheim relève de la responsabilité des fournisseurs de contenu respectifs. Leur subordonné
+    mentions légales en informe.</p>
+<p>Malgré un contrôle minutieux du contenu, nous déclinons toute responsabilité quant au contenu des liens externes. Nous
+    déclarons expressément que nous n'avons aucune influence sur la conception et le contenu des pages liées. Nous avons donc expressément
+    nous éloigner de tous les contenus des pages, qui sont accessibles via des liens depuis cette page. Cette déclaration
+    s'applique à tous les liens et références définis sur notre site Web.</p>
+</p>
+<p>
+<h2>Sources de données externes</h2>
+Ce site utilise:
 </p>
 
 
