sepa hilftext verändert

--- a/templates/en/payment_methods/payment_methods1.html
+++ b/templates/en/payment_methods/payment_methods1.html
@@ -18,7 +18,7 @@
                 <span><details>
                     <summary>
                         Help?
-                    </summary> Please chose the timespan in which you want to pay the fee.
+                    </summary> Please choose the timespan in which you want to pay the fee.
                 </details>
                     
                 </span>
