--- a/templates/en/sepa/sepa1.html
+++ b/templates/en/sepa/sepa1.html
@@ -14,7 +14,7 @@
         <span><details>
             <summary>
                 Help?
-            </summary>Enter your full name in the following order: title, last name, first name</span>
+            </summary>Enter your full name in the following order: title, last name, first name<br> For example: Dr. Mustermann Max</span>
         </details>
         </li>
         <li>
@@ -23,7 +23,7 @@
             <span><details>
                 <summary>
                     Help?
-                </summary>Enter the Streetname of your home here please.
+                </summary>Enter the Streetname of your home here please. It should be the same just as the address you wrote down earlier.
             </details> </span>
         </li>
         <li>
@@ -32,7 +32,7 @@
             <span><details>
                 <summary>
                     Help?
-                </summary>Enter the streetnumber of your home here please
+                </summary>Enter the streetnumber of your home here please. It should be the same just as the address you wrote down earlier.
                 </details></span>
         </li>
         <li>
