--- a/templates/en/sepa/sepa2.html
+++ b/templates/en/sepa/sepa2.html
@@ -14,7 +14,7 @@
             <span><details>
                 <summary>
                     Help?
-                </summary>Enter the ZIP-code of your adress here please.
+                </summary>Enter the ZIP-code of your adress here please. It should be the same just as the address you wrote down earlier.
             </details> </span>
         </li>
         <li>
@@ -23,7 +23,7 @@
             <span><details>
                 <summary>
                     Help?
-                </summary>Enter the City of your home here please.
+                </summary>Enter the City of your home here please. It should be the same just as the address you wrote down earlier.
                 </details> </span>
         </li>
         <li>
