--- a/templates/en/sepa/sepa3.html
+++ b/templates/en/sepa/sepa3.html
@@ -14,7 +14,9 @@
             <span><details>
                 <summary>
                     Help?
-                </summary>Enter the IBAN of your bank account here please.
+                </summary>Enter the IBAN of your bank account here please. It is also known as your bank identification code. <br>
+                It is a connection from the country you live in, your bank code and your account number.<br>
+                For example: <i>DE02120300000000202051     </i>
             </details> </span>
         </li>
         <li>
@@ -23,7 +25,8 @@
             <span><details>
                 <summary>
                     Help?
-                </summary>Enter the BIC of your bank account here please.
+                </summary>Enter the BIC of your bank account here please. It is also known as your Bank Identifier Code.<br>
+                For example: <i>BYLADEM1001</i>	
             </details></span>
         </li>
         <li>
@@ -32,7 +35,8 @@
             <span><details>
                 <summary>
                     Help?
-                </summary>Enter the name of your credit credit institution here please.
+                </summary>Enter the name of your credit institution here please.
+                For example: <i>DEUTSCHE KREDITBANK BERLIN </i>
             </details></span>
         </li>
         <li>
