--- a/templates/en/welcome.html
+++ b/templates/en/welcome.html
@@ -10,6 +10,8 @@
 <h1>
     Welcome!
 </h1>
+<form id = "welcometext">
+
 <p>Welcome to our website! </p>
 <p >
     Our Team A-5 is here to provide you with the best possible help you can get to fill out all the documents you have
@@ -17,16 +19,15 @@
     We work on translating any necessary information for you, whilest explaining in easy to follow steps how to fill
     every document you could have questions for.
 </p>
-<br>
 
 <p >
     Our team is composed of 6 students, all in their third semester, from the Hochschule Mannheim in Germany. We use the
     newest technology
     we just learned in cooperation with our professor, as well as the <b id="welfare"> welfare faculty </b>from our
-    school to create this website /app/.<br>
+    school to create this website.<br>
     If you want to learn more <b>about us </b>, you can find any necessary information <a href = "en/about_us.html"> here</a>.
 </p>
-
+</form>
 <p>
        
         <form action="/" method="POST">
@@ -61,19 +62,21 @@
                     
                 </li>
             </ul>
-            <ul>
-                <li>
-                    <h2>
-                        If you do not want to create an account you can click right here!
-                    </h2>
-                    <br>
-                    <a href= "home.html"> Where can we help you?</a>
-                </li>
-            </ul>
         
         </form>
 </p>
-
+<br>
+<br>
+<h2>
+    If you <u>do not want to register, or to login on our Website, </u>you can always use our service with a guest account! <details><summary>
+        <i>You can decide here on what we should help you!</i>
+    </summary> 
+        <p><a href=" "> A letter?</a> 
+            <br> <a href="/Web_A-5_Project_Repo/templates/en/home.html"> A document?</a> 
+            <br> <a href=" ">A contract?</a>
+        </p>
+    </details></span>
+</h2>
 
 <p id="finalsentence">
     <br>Every member of our team hopes that this site will give you the help you need on your way through germany's
