--- a/templates/en/gez_explanation.html
+++ b/templates/en/gez_explanation.html
@@ -21,5 +21,5 @@
     <li>Finally, if you are done, you just have to sign the document and you are done!</li>
 </ul>
 <h3> If you like to start now, just press the start button.</h3>
-<input type="submit" value="START">
+<input type="submit" value="START" onclick="">
 {% endblock %}
