--- a/templates/en/home.html
+++ b/templates/en/home.html
@@ -13,7 +13,7 @@
                 <a href="">Appartement registration</a>
         </li>
         <li>
-                <a href="/en/gez/general_information"> GEZ</a>
+                <a href='/en/gez/gez_explanation'> GEZ</a>
         </li>
         <li>
                 <a href="">Child care</a>
