--- a/templates/en/welcome.html
+++ b/templates/en/welcome.html
@@ -16,16 +16,14 @@
 <p >
     Our Team A-5 is here to provide you with the best possible help you can get to fill out all the documents you have
     to finish for a save and easy life in germany!
-    We work on translating any necessary information for you, whilest explaining in easy to follow steps how to fill
-    every document you could have questions for.
+    We work on translating any necessary information for you, so this website will help and explain you in easy to follow steps how to fill
+    three documents in several languages.
 </p>
 
 <p >
-    Our team is composed of 6 students, all in their third semester, from the Hochschule Mannheim in Germany. We use the
-    newest technology
-    we just learned in cooperation with our professor, as well as the <b id="welfare"> welfare faculty </b>from our
-    school to create this website.<br>
-    If you want to learn more <b>about us </b>, you can find any necessary information <a href = "en/about_us.html"> here</a>.
+    Our team is composed of 6 students from the Hochschule Mannheim in Germany.
+    We use all of your knowledge and expeariance to create this website in assosiation with the welfare faculty from the Hochschule Mannheim. <br>
+    If you want to learn more <b>about each member of our team </b>, you can find any necessary information <a href = "en/about_us.html"> here</a>.
 </p>
 </form>
 <p>
@@ -71,9 +69,9 @@
     If you <u>do not want to register, or to login on our Website, </u>you can always use our service with a guest account! <details><summary>
         <i>You can decide here on what we should help you!</i>
     </summary> 
-        <p><a href=" "> A letter?</a> 
-            <br> <a href="/Web_A-5_Project_Repo/templates/en/home.html"> A document?</a> 
-            <br> <a href=" ">A contract?</a>
+        <p><a href=" "> Appartement registration</a> 
+            <br> <a href="/Web_A-5_Project_Repo/templates/en/home.html"> GEZ</a> 
+            <br> <a href=" ">Child care</a>
         </p>
     </details></span>
 </h2>
