--- a/templates/en/en_base.html
+++ b/templates/en/en_base.html
@@ -26,23 +26,11 @@
 <body>
 
     <nav class="Navbar">
-        <div class="topnav" id="myTopnav">
-            <a href="/en/home" class="active">Home</a>
-            <a href="">Documents</a>
-            <div class="dropdown">
-                <button class="dropbtn">Languages
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="?lang=en">English</a>
-                    <a href="?lang=de">German</a>
-                    <a href="?lang=bg">Bulgarian</a>
-                    <a href="?lang=fr">French</a>
-                </div>
-            </div>
-            <a href="/en/about">About</a>
-            <a href="">Logout</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+        <div class="firstnavbar" id="myFirstnav">
+            <a href="/en/home"> <img src="static/images/us.png"> </a>
+            <a href="/de/home"><img src="static/images/de.png"> </a>
+            <a href="/bg/home"><img src="static/images/bg.png"> </a>
+            <a href="/fr/home"><img src="static/images/fr.png"> </a>
         </div>
     </nav>
 
