endgültiger split en

--- a/templates/en/sepa/sepa1.html
+++ b/templates/en/sepa/sepa1.html
@@ -14,27 +14,11 @@
         <span><details>
             <summary>
                 Help?
-            </summary>Enter your full name in the following order: title, last name, first name<br> For example: Dr. Mustermann Max</span>
+            </summary>Enter your full name in the following order: title, last name, first name<br> For example: Dr. Mustermann Max
+        <br> If this bank account is not yours, please write down the name of this accounts owner.</span>
         </details>
         </li>
-        <li>
-            <label for="street">Street:</label>
-            <input type="text" id="street" name="street" required>
-            <span><details>
-                <summary>
-                    Help?
-                </summary>Enter the Streetname of your home here please. It should be the same just as the address you wrote down earlier.
-            </details> </span>
-        </li>
-        <li>
-            <label for="home_nr">Streetnumber:</label>
-            <input type="text" id="street_nr" name="street_nr" required>
-            <span><details>
-                <summary>
-                    Help?
-                </summary>Enter the streetnumber of your home here please. It should be the same just as the address you wrote down earlier.
-                </details></span>
-        </li>
+        
         <li>
             <input type="button" value="Back" onClick="javascript:history.back()">
             <input type="submit" value="Submit">
