--- a/templates/en/adress/adress2.html
+++ b/templates/en/adress/adress2.html
@@ -7,43 +7,36 @@
 <div class="pers-fields">
     <form action="/{{language}}/gez/adress" method="POST">
         <h1> Adress </h1>
-        <ul> <li>
-            <label for="zip_code">ZIP Code:</label>
-            <input type="number" id="zip_code" name="zip_code" required>
-            <span class="extra-info"><details><summary>Help?
-
-            </summary>
-                Please enter the Postal Code of your adress. For example 67812, 62342
-            </details>
-        </span>
-        </li>
-        <li>
-            <label for="city">City:</label>
-            <input type="text" id="city" name="city" required>
-            <span class="extra-info"><details><summary>Help?
-
-            </summary>
-            Please enter the name of the city you live in. For example: Johntown, Getinsburg.
-        </details>
-               
-            </span>
-        </li>
-        <li>
-            <label for="phone_number">Phone number: (Optional)</label>
-            <input type="tel" id="phone_number" name="phone_number">
-            <span class="extra-info"><details><summary>Help?
-
-            </summary>
-            If you would like to be contacted per Telephone, please enter your Telephone number. It is completely optional. Without it you would only receive letters.
-        </details>
-                
-            </span>
-        </li>
-        <li>
-            <input type="button" value="Back" onClick="javascript:history.back()">
-            <input type="submit" value='submit'>
-        </li>
-
-    </ul>
-    </form>
-    {% endblock %}
+        <ul>
+            <li>
+    <label for="street">Street:</label>
+    <input type="text" name="street" id="street" required>
+    <span class="extra-info"> <details><summary>
+        Help?
+    </summary> 
+        <p>Please enter the name of the Street you are living in. For example: Examplestreet, Longstreet
+        </p>
+    </details>
+        
+    </span>
+</li>
+<li>
+    <label for="street_nr">Street-number:</label>
+    <input type="text" id="street_nr" name="street_nr" required>
+    <span class="extra-info"><details><summary>
+        Help?
+    </summary> 
+        <p>Please enter the number of your flat, on the given street.For Example 2, 4a, 254
+        </p>
+    </details>
+        
+    </span>
+</li>
+<li>
+    <input type="button" value="Back" onClick="javascript:history.back()">
+    <input type="submit" value='submit'>
+</li>
+</ul>
+</form>
+</div>
+{% endblock %}
