--- a/templates/en/general_information/general_information2.html
+++ b/templates/en/general_information/general_information2.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 <form action="/{{language}}/gez/general_information" method='POST'>
-    <h1>General Information</h1>
+    <h1>General Information 2 of 3</h1>
     <ul>
         <li>
             <label for="fName">First Name</label>
