--- a/templates/en/payment_methods/payment_methods1.html
+++ b/templates/en/payment_methods/payment_methods1.html
@@ -7,7 +7,7 @@
 
 <div class="pers-fields">
     <form action="/{{language}}/gez/payment_methods" method="POST">
-        <h1>Types of payment</h1>
+        <h1>Types of payment 1 of 2</h1>
         <ul>
             <li>
                 <label for=""> Timespan </label>
