--- a/templates/en/sepa/sepa1.html
+++ b/templates/en/sepa/sepa1.html
@@ -6,7 +6,7 @@
 {% block body %}
 
 <form action="/{{language}}/gez/sepa" method="POST">
-    <h1>SEPA direct debit mandate</h1>
+    <h1>SEPA direct debit mandate 1 of 4</h1>
     <ul>
         <li>
         <label for="name">Name</label>
