--- a/templates/bg/general_information/general_information2.html
+++ b/templates/bg/general_information/general_information2.html
@@ -5,18 +5,8 @@
 {% endblock %}
 {% block body %}
 <form action="/{{language}}/gez/general_information" method='POST'>
-    <h1>General Information</h1>
+    <h1>General Information 2 of 3</h1>
     <ul>
-        <li>
-            <label for="">Gender</label>
-            <input type="radio" name="gender" id="radioMale" required> Male
-            <input type="radio" name="gender" id="radioFemale"> Female
-            <span><details><summary>
-                Help?
-            </summary> 
-                <p>Enter your gender here please </p>
-            </details></span>
-        </li>
         <li>
             <label for="fName">First Name</label>
             <input type="text" name="firstName" id="fName" required>
@@ -35,17 +25,6 @@
             </summary> 
                 <p>Enter your last name here please 
                     <br> Also known as your family name. You can find it on your ID Card.
-                </p>
-            </details></span>
-        </li>
-        <li>
-            <label for="dateOfBirth">Date of Birth</label>
-            <input type="date" name="dateOfBirth" id="dob" required>
-            <span><details><summary>
-                Help?
-            </summary> 
-                <p>Enter your date of birth here please 
-                    <br> It is the day you were born.
                 </p>
             </details></span>
         </li>
