about us text veraendert

--- a/templates/en/welcome.html
+++ b/templates/en/welcome.html
@@ -17,12 +17,12 @@
     Our Team A-5 is here to provide you with the best possible help you can get to fill out all the documents you have
     to finish for a save and easy life in germany!
     We work on translating any necessary information for you, so this website will help and explain you in easy to follow steps how to fill
-    three documents in several languages.
+    three documents (Appartement registration, GEZ and Child Care) in several languages.
 </p>
 
 <p >
     Our team is composed of 6 students from the Hochschule Mannheim in Germany.
-    We use all of your knowledge and expeariance to create this website in assosiation with the welfare faculty from the Hochschule Mannheim. <br>
+    We use all of your knowledge and expeariance to create this website in cooperation with the welfare faculty from the Hochschule Mannheim. <br>
     If you want to learn more <b>about each member of our team </b>, you can find any necessary information <a href = "en/about_us.html"> here</a>.
 </p>
 </form>
