--- a/templates/en/about_us.html
+++ b/templates/en/about_us.html
@@ -12,14 +12,12 @@
 <p class="text">
     Our Team A-5 is here to provide you with the best possible help you can get to fill out all the documents you have
     to finish for a save and easy life in germany!
-    We work on translating any necessary information for you, whilest explaining in easy to follow steps how to fill
-    every document you could have questions for.
+    So the only purpose of this website is to help you through evry step of the specific document you need help.
 </p>
 <p class="text">
-    Our team is composed of 6 students, all in their third semester, from the Hochschule Mannheim in Germany. We use the
-    newest technology
-    we just learned in cooperation with our professor, as well as the <b id="welfare"> welfare faculty </b>from our
-    school to create this website.
+    Our team is composed of 6 students from the Hochschule Mannheim in Germany. 
+    We create this website in cooperation with the welfare faculty of the Hochschule Mannheim.
+    Espacially with Andreas Lindemann.
 </p>
 <p>
 
@@ -28,39 +26,47 @@
     Our teammembers are:
 </h2>
 <p class="boxed">
-    <img src="/images/Profil 1.png" class="image"> <br>First member is Georgy Haydukov, a who is responsible for
-    the cookies and our privacy policies. You can reach him under his email: <a
-        href="11@stud.hs-mannheim.de">11@stud.hs-mannheim.de</a>
+    <img src="/images/Profil 1.png" class="image"> <br>
+    First member is Georgi Haydukov, a who is responsible for
+    the cookies and our privacy policies, bulgarian translation and some JavaScript. <br>
+    You can reach him under his email: 
+    <a href="georgi.haydukov@stud.hs-mannheim.de">georgi.haydukov@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
 <br>
 <p class="boxed">
-    <img src="/images/Profil 2.png" class="image"> <br>Furthermore we have Aleksandar Histrov, our Flask specialist and
-    bulgarian translator. You can reach him under his email: <a href="12@stud.hs-mannheim.de">12@stud.hs-mannheim.de</a>
+    <img src="/images/Profil 2.png" class="image"> <br>
+    Furthermore we have Aleksandar Histrov, our Flask specialist and
+    bulgarian translator. 
+    You can reach him under his email: 
+    <a href="aleksandar.histrov@stud.hs-mannheim.de">aleksandar.histrov@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
 <br>
 <p class="boxed">
-    <img src="/images/Profil 3.png" class="image"> <br>This is Robert Endler who works not only on our imprint, but also
-    on our french translation. You can reach him under his email: <a
-        href="13@stud.hs-mannheim.de">13@stud.hs-mannheim.de</a>
+    <img src="/images/Profil 3.png" class="image"> <br>
+    This is Robert Endler who works not only on our imprint, but also
+    on our french translation. 
+    You can reach him under his email: 
+    <a href="robert.endler@stud.hs-mannheim.de">robert.endler@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
 <br>
 <p class="boxed">
     <img src="/images/Profil 4.png" class="image"> <br>Here is Ilyas Bal who is working on our tutorials and
-    explanations for your future documents. You can reach him under his email: <a
-        href="14@stud.hs-mannheim.de">14@stud.hs-mannheim.de</a>
+    explanations for your future documents. 
+    You can reach him under his email: 
+    <a href="ilyas.bal@stud.hs-mannheim.de">ilyas.bal@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
 <br>
 <p class="boxed">
     <img src="/images/profil 5.png" class="image"> <br>Lennart Gulde is also working on our tutorials and helping out on
-    our loginsystem. You can reach him under his email: <a href="15@stud.hs-mannheim.de">15@stud.hs-mannheim.de</a>
+    our loginsystem. You can reach him under his email: <a href="lennart.gulde@stud.hs-mannheim.de">lennart.gulde@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
@@ -68,7 +74,7 @@
 <p class="boxed">
     <img src="/images/profil 6.png" class="image"> <br>Finally here is Muhammed Yavuz, who is responsible for the
     information you are reading right now! Moreover he works on the login, just as on the menu. You can reach him under
-    his email: <a href="16@stud.hs-mannheim.de">16@stud.hs-mannheim.de</a>
+    his email: <a href="muhammed.yavuz@stud.hs-mannheim.de">muhammed.yavuz@stud.hs-mannheim.de</a>
 </p>
 
 <p id="finalsentence">
