--- a/templates/bg/adress/adress4.html
+++ b/templates/bg/adress/adress4.html
@@ -1,29 +1,29 @@
-{% extends 'en/en_base.html' %}
+{% extends 'bg/bg_base.html' %}
 
 {% block head %}
-<title>GEZ</title>
+<title>Адресна регистрация</title>
 {% endblock %}
 {% block body %}
 <div class="pers-fields">
     <form action="/{{language}}/gez/adress" method="POST">
-        <h1> Adress 4 of 5</h1>
+        <h1> Адрес 4 от 5</h1>
         <ul> <li>
-            <label for="zip_code">ZIP Code:</label>
+            <label for="zip_code">ZIP код:</label>
             <input type="number" id="zip_code" name="zip_code" required>
-            <span class="extra-info"><details><summary>Help?
+            <span class="extra-info"><details><summary>Помощ?
 
             </summary>
-                Please enter the Postal Code of your adress. For example 67812, 62342
+            Моля, въведете пощенския код на адреса си. Например 67812, 62342
             </details>
         </span>
         </li>
         <li>
-            <label for="city">City:</label>
+            <label for="city">Град:</label>
             <input type="text" id="city" name="city" required>
-            <span class="extra-info"><details><summary>Help?
+            <span class="extra-info"><details><summary>Помощ?
 
             </summary>
-            Please enter the name of the city you live in. For example: Johntown, Getinsburg.
+            Моля, въведете името на града, в който живеете. Например: Johntown, Getinsburg.
         </details>
                
             </span>
