--- a/templates/bg/adress/adress5.html
+++ b/templates/bg/adress/adress5.html
@@ -1,20 +1,20 @@
-{% extends 'en/en_base.html' %}
+{% extends 'bg/bg_base.html' %}
 
 {% block head %}
-<title>GEZ</title>
+<title>Адресна регистрация</title>
 {% endblock %}
 {% block body %}
 <div class="pers-fields">
     <form action="/{{language}}/gez/adress" method="POST">
-        <h1> Adress 5 of 5</h1>
+        <h1> Адрес 5 от 5</h1>
         <ul>
         <li>
-            <label for="phone_number">Phone number: (Optional)</label>
+            <label for="phone_number">Телефон: (опционално)</label>
             <input type="tel" id="phone_number" name="phone_number">
             <span class="extra-info"><details><summary>Help?
 
             </summary>
-            If you would like to be contacted per Telephone, please enter your Telephone number. It is completely optional. Without it you would only receive letters.
+            Ако искате да се свържем с Вас по телефон, моля, въведете Вашия телефонен номер. Той е напълно опционален. Без него бихте получавали само писма.
         </details>
                 
             </span>
